<resources>
    <string name="app_name">201508721_final</string>
    <string name="btstart">시작하기</string>
    <string name="btinput">정보입력</string>
    <string name="bteditor">개발자</string>
    <string name="btend">끝내기</string>
    <string name="dlgname">사용자 이름</string>
    <string name="dlgETname">여기에 입력하세요.</string>
    <string name="dlgage">나이</string>
    <string name="dlgETage">여기에 입력하세요.</string>
    <string name="dlgmajor">전공</string>
    <string name="dlgETmajor">여기에 입력하세요.</string>
    <string name="tvName2">이름:</string>
    <string name="tvAge2">나이:</string>
    <string name="tvMajor2">전공:</string>
    <string name="tvEx">서일대학교앱을 찾아주셔서 감사합니다.</string>
    <string name="btSchoolsystem">종합정보시스템</string>
    <string name="btCheck">출결관리시스템</string>
    <string name="btcampus">캠퍼스 소개</string>
    <string name="btExMajor">전공 소개</string>
    <string name="btbus">셔틀버스 시간표</string>
    <string name="btrecruit">채용정보</string>
    <string name="btexit">나가기</string>
    <string name="tvAccess">접속정보</string>
    <string name="tvName3">이름:</string>
    <string name="tvAge3">나이:</string>
    <string name="tvMajor3">전공:</string>
    <string name="tvName4">이름</string>
    <string name="tvAge4">나이</string>
    <string name="tvMajor4">전공</string>
    <string name="tvName5">이름을 입력하시오.</string>
    <string name="tvAge5">나이를 입력하시오.</string>
    <string name="tvMajor5">전공을 입력하시오.</string>
    <string name="btHocheon">11</string>
    <string name="btHeung">1</string>
    <string name="btChoil">2</string>
    <string name="btSejong">3</string>
    <string name="btJ">10</string>
    <string name="btSeoil">5</string>
    <string name="btJiduck">6</string>
    <string name="btNuri">9</string>
    <string name="btLib">8</string>
    <string name="btBae">7</string>
    <string name="btEntrance">12</string>
    <string name="btK">4</string>
    <string name="btexit2">나가기</string>
    <string name="btComputer">컴퓨터전자공학과</string>
    <string name="btElectronic">전기공학과</string>
    <string name="btTele">정보통신공학과</string>
    <string name="btSoft">소프트웨어공학과</string>
    <string name="btBuild">건축공학과</string>
    <string name="btChemi">생명화공학과</string>
    <string name="btGround">토목공학과</string>
    <string name="btCar">스마트자동차학과</string>
    <string name="btSanup">산업경영학과</string>
    <string name="btNurse">간호학과</string>
    <string name="btFood">식품영양학과</string>
    <string name="btChildedu">유아교육학과</string>
    <string name="btLaw">자산법률학과</string>
    <string name="btCulture">민족문화학과</string>
    <string name="btEng">영어과</string>
    <string name="btJap">일본어과</string>
    <string name="btChi">중국어과</string>
    <string name="btMedia">미디어출판학과</string>
    <string name="btSociety">사회복지학과</string>
    <string name="btSemu">세무회계학과</string>
    <string name="btMovie">연극영화학과</string>
    <string name="btFashion">패션산업학과</string>
    <string name="btFdesign">생활가구디자인학과</string>
    <string name="btIndesign">실내디자인학과</string>
    <string name="btCommu">커뮤니케이션디자인학과</string>
    <string name="btSports">레저스포츠학과</string>
    <string name="btVmd">VMD전시디자인학과</string>
    <string name="btexit3">나가기</string>
    <string name="btexit4">나가기</string>
    <string name="btRecruit1">교내채용정보</string>
    <string name="btRecruit2">사람인</string>
    <string name="btRecruit3">잡코리아</string>
    <string name="btRecruit4">워크넷</string>
    <string name="btexit5">나가기</string>
</resources>
