<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inputdlg"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dlgname"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dlgname" />

    <EditText
        android:id="@+id/dlgETname"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:hint="@string/dlgETname"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/dlgage"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dlgage" />

    <EditText
        android:id="@+id/dlgETage"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:hint="@string/dlgETage"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/dlgmajor"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dlgmajor" />

    <EditText
        android:id="@+id/dlgETmajor"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:hint="@string/dlgETmajor"
        android:textColor="#000000" />

</LinearLayout>