<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.a201508721_final.MajorActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <TabHost
            android:id="@android:id/tabhost"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/lin1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:showDividers="middle">
                </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/tabIt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">

                            <Button
                                android:id="@+id/btComputer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btComputer" />

                            <Button
                                android:id="@+id/btElectronic"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btElectronic" />

                            <Button
                                android:id="@+id/btTele"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btTele" />

                            <Button
                                android:id="@+id/btSoft"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btSoft" />

                            <Button
                                android:id="@+id/btBuild"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btBuild" />

                            <Button
                                android:id="@+id/btChemi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btChemi" />

                            <Button
                                android:id="@+id/btGround"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btGround"/>

                            <Button
                                android:id="@+id/btCar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btCar"/>

                            <Button
                                android:id="@+id/btSanup"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btSanup"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tabScience"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center">
                        <Button
                            android:id="@+id/btNurse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btNurse" />

                        <Button
                            android:id="@+id/btFood"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btFood" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tabHuman"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                            <Button
                                android:id="@+id/btChildedu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btChildedu" />

                            <Button
                                android:id="@+id/btLaw"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btLaw" />

                            <Button
                                android:id="@+id/btCulture"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btCulture" />

                            <Button
                                android:id="@+id/btEng"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btEng" />

                            <Button
                                android:id="@+id/btJap"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btJap" />

                            <Button
                                android:id="@+id/btChi"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btChi" />

                            <Button
                                android:id="@+id/btMedia"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btMedia"/>

                            <Button
                                android:id="@+id/btSociety"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btSociety"/>

                            <Button
                                android:id="@+id/btSemu"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/btSemu"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tabActivity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btMovie"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btMovie" />

                        <Button
                            android:id="@+id/btFashion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btFashion" />

                        <Button
                            android:id="@+id/btFdesign"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btFdesign" />

                        <Button
                            android:id="@+id/btIndesign"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btIndesign" />

                        <Button
                            android:id="@+id/btCommu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btCommu" />

                        <Button
                            android:id="@+id/btSports"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btSports" />

                        <Button
                            android:id="@+id/btVmd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/btVmd" />
                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

        </TabHost>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btexit3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btexit3" />
    </LinearLayout>

</LinearLayout>
